--- a/collated/main/A0139633B.md
+++ b/collated/main/A0139633B.md
@@ -199,11 +199,15 @@ public class ListCommandParser {
     /** Updates the filter of the filtered task list to filter by the given keywords*/
     void updateFilteredTaskList(Set<String> keywords);
 
+
+
 }
 ```
 ###### /java/seedu/todolist/model/ModelManager.java
 ``` java
     public UnmodifiableObservableList<Task> getFilteredIncompleteTaskList() {
+        resetViews();
+        isViewIncomplete = true;
         filteredTasks.setPredicate((Predicate<? super Task>) task -> {
             return !task.isComplete();
         });
@@ -216,6 +220,8 @@ public class ListCommandParser {
 ###### /java/seedu/todolist/model/ModelManager.java
 ``` java
     public UnmodifiableObservableList<Task> getFilteredCompleteTaskList() {
+        resetViews();
+        isViewComplete = true;
         filteredTasks.setPredicate((Predicate<? super Task>) task -> {
             return task.isComplete();
         });
@@ -228,55 +234,67 @@ public class ListCommandParser {
 ###### /java/seedu/todolist/model/ModelManager.java
 ``` java
     public UnmodifiableObservableList<Task> getFilteredOverdueTaskList() {
+        resetViews();
+        isViewOverdue = true;
         filteredTasks.setPredicate((Predicate<? super Task>) task -> {
-            //get current time and compare with the task's end time
-            SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
-            Date currentDate = new Date();
-            if (task.getEndTime() != null) {
-                String taskDateString = task.getEndTime().toString();
-                try {
-                    Date taskDate = dateFormat.parse(taskDateString);
-                    return currentDate.compareTo(taskDate) > 0;
-                } catch (ParseException e) {
-                    e.printStackTrace();
-                    return false;
-                }
-            } else {
-                return false;
-            }
+            return isOverdue(task);
         });
         indicateViewListChanged(ListCommand.TYPE_OVERDUE);
         return new UnmodifiableObservableList<>(filteredTasks);
     }
+
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    public boolean isOverdue(Task task) {
+        SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
+        Date currentDate = new Date();
+        if (task.getEndTime() != null) {
+            String taskDateString = task.getEndTime().toString();
+            try {
+                Date taskDate = dateFormat.parse(taskDateString);
+                return currentDate.compareTo(taskDate) > 0;
+            } catch (ParseException e) {
+                e.printStackTrace();
+                return false;
+            }
+        } else {
+            return false;
+        }
+    }
+
 
     @Override
 ```
 ###### /java/seedu/todolist/model/ModelManager.java
 ``` java
     public UnmodifiableObservableList<Task> getFilteredUpcomingTaskList() {
+        resetViews();
+        isViewUpcoming = true;
         //get tasks that are incomplete and are not overdue
         filteredTasks.setPredicate((Predicate<? super Task>) task -> {
-            //get current time and compare with the task's end time
-            SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
-            Date currentDate = new Date();
-            if (task.getEndTime() != null) {
-                String taskDateString = task.getEndTime().toString();
-                try {
-                    Date taskDate = dateFormat.parse(taskDateString);
-                    return currentDate.compareTo(taskDate) <= 0;
-                } catch (ParseException e) {
-                    e.printStackTrace();
-                    return false;
-                }
-            } else {
+            return isUpcoming(task);
+        });
+        indicateViewListChanged(ListCommand.TYPE_UPCOMING);
+        return new UnmodifiableObservableList<>(filteredTasks);
+    }
+
+    private boolean isUpcoming(Task task) {
+      //get current time and compare with the task's end time
+        SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
+        Date currentDate = new Date();
+        if (task.getEndTime() != null) {
+            String taskDateString = task.getEndTime().toString();
+            try {
+                Date taskDate = dateFormat.parse(taskDateString);
+                return currentDate.compareTo(taskDate) <= 0;
+            } catch (ParseException e) {
+                e.printStackTrace();
                 return false;
             }
-        });
-        System.out.println(filteredTasks);
-        SortedList<Task> sortedList = new SortedList<Task>(filteredTasks, dateComparator);
-        System.out.println(sortedList);
-        indicateViewListChanged(ListCommand.TYPE_UPCOMING);
-        return new UnmodifiableObservableList<>(sortedList);
+        } else {
+            return false;
+        }
     }
 
     //Comparator for Date
@@ -286,91 +304,32 @@ public class ListCommandParser {
     Comparator<? super Task> dateComparator = new Comparator<Task>() {
         @Override
         public int compare(Task firstTask, Task secondTask) {
-            SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
-            String firstTaskDueDateString = firstTask.getEndTime().toString();
-            String secondTaskDueDateString = secondTask.getEndTime().toString();
-            try {
-                Date firstTaskDueDate = dateFormat.parse(firstTaskDueDateString);
-                Date secondTaskDueDate = dateFormat.parse(secondTaskDueDateString);
-                return firstTaskDueDate.compareTo(secondTaskDueDate);
-            } catch (ParseException e) {
-                e.printStackTrace();
-                return 0; //dummy value
+            if (firstTask.getEndTime() != null && secondTask.getEndTime() != null) {
+                SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
+                String firstTaskDueDateString = firstTask.getEndTime().toString();
+                String secondTaskDueDateString = secondTask.getEndTime().toString();
+                try {
+                    Date firstTaskDueDate = dateFormat.parse(firstTaskDueDateString);
+                    Date secondTaskDueDate = dateFormat.parse(secondTaskDueDateString);
+                    return firstTaskDueDate.compareTo(secondTaskDueDate);
+                } catch (ParseException e) {
+                    e.printStackTrace();
+                    return 0; //dummy value
+                }
+            } else {
+                return 1;
             }
         }
     };
 
     @Override
     public void updateFilteredListToShowAll() {
+        resetViews();
+        isViewAll = true;
         indicateViewListChanged(ListCommand.TYPE_ALL);
         filteredTasks.setPredicate(null);
     }
 
-    @Override
-    public void updateFilteredTaskList(Set<String> keywords) {
-        updateFilteredTaskList(new PredicateExpression(new NameQualifier(keywords)));
-    }
-
-    private void updateFilteredTaskList(Expression expression) {
-        filteredTasks.setPredicate(expression::satisfies);
-    }
-
-    //========== Inner classes/interfaces used for filtering =================================================
-
-    interface Expression {
-        boolean satisfies(Task task);
-        @Override
-        String toString();
-    }
-
-    private class PredicateExpression implements Expression {
-
-        private final Qualifier qualifier;
-
-        PredicateExpression(Qualifier qualifier) {
-            this.qualifier = qualifier;
-        }
-
-        @Override
-        public boolean satisfies(Task task) {
-            return qualifier.run(task);
-        }
-
-        @Override
-        public String toString() {
-            return qualifier.toString();
-        }
-    }
-
-    interface Qualifier {
-        boolean run(Task task);
-        @Override
-        String toString();
-    }
-
-    private class NameQualifier implements Qualifier {
-        private Set<String> nameKeyWords;
-
-        NameQualifier(Set<String> nameKeyWords) {
-            this.nameKeyWords = nameKeyWords;
-        }
-
-        @Override
-        public boolean run(Task task) {
-            return nameKeyWords.stream()
-                    .filter(keyword -> StringUtil.containsIgnoreCase(task.getName().fullName,
-                            task.getTags().toSet(), keyword))
-                    .findAny()
-                    .isPresent();
-        }
-
-        @Override
-        public String toString() {
-            return "name=" + String.join(", ", nameKeyWords);
-        }
-    }
-
-}
 ```
 ###### /java/seedu/todolist/storage/XmlToDoListStorage.java
 ``` java
