--- a/collated/main/A0141647E.md
+++ b/collated/main/A0141647E.md
@@ -1,6 +1,557 @@
 # A0141647E
+###### /java/seedu/todolist/logic/commands/CompleteCommand.java
+``` java
+/**
+ * Mark a Task as completed using its last displayed index from the ToDoList
+ */
+public class CompleteCommand extends Command {
+    public static final String COMMAND_WORD = "complete";
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD
+            + ": Mark as completed the task identified by the index number used in the last task listing.\n"
+            + "Parameters: INDEX (must be a positive integer)\n"
+            + "Example: " + COMMAND_WORD + " 1";
+
+    public static final String MESSAGE_COMPLETE_TASK_SUCCESS = "Completed Task: %1$s";
+
+    public static final String MESSAGE_INDEX_CONSTRAINTS = "Index number of the task must be at least 1.";
+
+    public final int targetIndex;
+
+    private String commandText;
+
+    public CompleteCommand (int targetIndex) throws IllegalValueException {
+        if (targetIndex < 1) {
+            throw new IllegalValueException(MESSAGE_INDEX_CONSTRAINTS);
+        }
+        this.targetIndex = targetIndex - 1;
+    }
+
+    @Override
+    public CommandResult execute() throws CommandException {
+
+        UnmodifiableObservableList<Task> lastShownList = model.getFilteredTaskList();
+
+        if (targetIndex >= lastShownList.size()) {
+            throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+        }
+
+        Task taskToComplete = lastShownList.get(targetIndex);
+
+        try {
+            model.completeTask(targetIndex, taskToComplete);
+        } catch (TaskNotFoundException pnfe) {
+            assert false : "The target task cannot be missing";
+        }
+        commandText = String.format(MESSAGE_COMPLETE_TASK_SUCCESS, taskToComplete);
+        return new CommandResult(commandText);
+    }
+
+    @Override
+    public boolean isMutating() {
+        return true;
+    }
+
+    @Override
+    public String getCommandText() {
+        return commandText;
+    }
+}
+```
+###### /java/seedu/todolist/logic/commands/DescribeCommand.java
+``` java
+/*
+ * Add/modify the description of a task in the to-do list.
+```
+###### /java/seedu/todolist/logic/commands/DescribeCommand.java
+``` java
+ */
+public class DescribeCommand extends Command {
+    public static final String COMMAND_WORD = "describe";
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Add/Modify the description of an existing task "
+            + "by the index number used in the last task listing. "
+            + "Existing values will be overwritten by the input values.\n"
+            + "Parameters: INDEX (must be a positive integer) [DESCRIPTION]"
+            + "Example: " + COMMAND_WORD + " 1 This is a very important task!";
+
+    public static final String MESSAGE_DESCRIBE_TASK_SUCCESS = "Added description to task: %1$s";
+    public static final String MESSAGE_NOT_DESCRIBED = "At least one field to edit must be provided.";
+
+    private final int filteredTaskListIndex;
+    private final String description;
+    private String commandResultText;
+
+    public DescribeCommand(int filteredTaskListIndex, String description) {
+        assert filteredTaskListIndex > 0;
+        assert description != null;
+
+        this.filteredTaskListIndex = filteredTaskListIndex - 1;
+        this.description = description;
+    }
+
+    public CommandResult execute() throws CommandException {
+        List<Task> lastShownList = model.getFilteredTaskList();
+
+        if (filteredTaskListIndex >= lastShownList.size()) {
+            throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+        }
+
+        Task taskToDescribe = lastShownList.get(filteredTaskListIndex);
+        Task editedTask = TaskParser.parseTask(taskToDescribe);
+        editedTask.setDescription(description);
+
+        model.describeTask(filteredTaskListIndex, editedTask);
+        model.updateFilteredListToShowAll();
+
+        commandResultText = String.format(MESSAGE_DESCRIBE_TASK_SUCCESS, editedTask);
+        return new CommandResult(commandResultText);
+    }
+
+    @Override
+    public boolean isMutating() {
+        return true;
+    }
+
+    @Override
+    public String getCommandText() {
+        return commandResultText;
+    }
+}
+```
+###### /java/seedu/todolist/logic/parser/CompleteCommandParser.java
+``` java
+/**
+ * Parses input arguments and creates a new CompleteCommand object
+ */
+public class CompleteCommandParser {
+
+    /**
+     * Parses the given {@code String} of arguments in the context of the CompleteCommand
+     * and returns a CompleteCommand object for execution.
+     */
+    public Command parse(String args) {
+
+        Optional<Integer> index = ParserUtil.parseIndex(args);
+        if (!index.isPresent()) {
+            return new IncorrectCommand(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, CompleteCommand.MESSAGE_USAGE));
+        }
+
+        try {
+            CompleteCommand newCompleteCommand = new CompleteCommand(index.get());
+            return newCompleteCommand;
+        } catch (IllegalValueException ive) {
+            return new IncorrectCommand(ive.getMessage());
+        }
+    }
+}
+```
+###### /java/seedu/todolist/logic/parser/DescribeCommandParser.java
+``` java
+/*
+ * Parse input arguments and return a new DescribeCommand object.
+ */
+public class DescribeCommandParser {
+
+    /*
+     * Parse the given {@code String} in the context of the Describe command
+     * and return a DescribeCommand object for execution
+     */
+    public Command parse(String args) {
+        ArgumentTokenizer argsTokenizer =
+                new ArgumentTokenizer();
+        argsTokenizer.tokenize(args);
+        List<Optional<String>> preambleFields = ParserUtil.splitPreamble(argsTokenizer.getPreamble().orElse(""), 2);
+
+        Optional<Integer> index = preambleFields.get(0).flatMap(ParserUtil::parseIndex);
+        Optional<String> description = preambleFields.get(1);
+
+        if (!index.isPresent() || !description.isPresent() || index.get() < 1) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, DescribeCommand.MESSAGE_USAGE));
+        }
+
+        return new DescribeCommand(index.get(), description.get());
+    }
+}
+```
+###### /java/seedu/todolist/model/Model.java
+``` java
+    void completeTask(int filteredTaskListIndex, Task targetTask)
+            throws UniqueTaskList.TaskNotFoundException;
+
+    /**
+     * Updates the task located at {@code filteredTaskListIndex} with {@code editedTask}.
+     *
+     * @throws DuplicateTaskException if updating the task's details causes the task to be equivalent to
+     *      another existing task in the list.
+     * @throws IndexOutOfBoundsException if {@code filteredTaskListIndex} < 0 or >= the size of the filtered list.
+     */
+    void updateTask(int filteredTaskListIndex, Task editedTask)
+            throws UniqueTaskList.DuplicateTaskException;
+
+    /**
+     * Updates the task located at {@code filteredTaskListIndex} with {@code editedTask}.
+     * @throws IndexOutOfBoundsException if {@code filteredTaskListIndex} < 0 or >= the size of the filtered list.
+     */
+```
+###### /java/seedu/todolist/model/Model.java
+``` java
+    void describeTask(int filteredTaskListIndex, Task editedTask);
+
+    /** Returns the filtered task list as an {@code UnmodifiableObservableList<ReadOnlyTask>} */
+    UnmodifiableObservableList<Task> getFilteredTaskList();
+
+    /** Returns the filtered task list as an {@code UnmodifiableObservableList<ReadOnlyTask>} */
+    UnmodifiableObservableList<Task> getSortedTaskList();
+
+    /** Returns the filtered task list of incomplete tasks as an {@code UnmodifiableObservableList<ReadOnlyTask>} */
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    public synchronized void completeTask(int filteredTaskListIndex, Task target) throws TaskNotFoundException {
+        int toDoListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
+        toDoList.completeTask(toDoListIndex, target);
+        indicateToDoListChanged(COMPLETE);
+    }
+
+    @Override
+    public synchronized void addTask(Task task) throws UniqueTaskList.DuplicateTaskException {
+        toDoList.addTask(task);
+        getFilteredIncompleteTaskList();
+        indicateToDoListChanged(ADD);
+       // EventsCenter.getInstance().post(new JumpToListRequestEvent(index - 1));
+
+    }
+
+    @Override
+    public void updateTask(int filteredTaskListIndex, Task editedTask)
+            throws UniqueTaskList.DuplicateTaskException {
+        assert editedTask != null;
+
+        int toDoListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
+        toDoList.updateTask(toDoListIndex, editedTask);
+        indicateToDoListChanged(UPDATE, toDoListIndex);
+    }
+
+    @Override
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    public void describeTask(int filteredTaskListIndex, Task editedTask) {
+        assert editedTask != null;
+
+        int toDoListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
+        toDoList.describeTask(toDoListIndex, editedTask);
+        indicateToDoListChanged(DESCRIBE);
+    }
+
+    //=========== Filtered Task List Accessors =============================================================
+
+    @Override
+    public UnmodifiableObservableList<Task> getFilteredTaskList() {
+        return new UnmodifiableObservableList<>(filteredTasks);
+    }
+
+    @Override
+    public UnmodifiableObservableList<Task> getSortedTaskList() {
+        return new UnmodifiableObservableList<>(sortedTasks);
+    }
+
+
+
+
+    @Override
+```
+###### /java/seedu/todolist/model/task/EndTask.java
+``` java
+/*
+ * Represent a Task with an EndTime but no specified StartTime
+ */
+public class EndTask extends Task {
+
+    private EndTime endTime;
+
+
+    /**
+     * name, start time, end time and tags must be present and not null.
+     */
+    public EndTask(Name name, EndTime endTime, UniqueTagList tags) {
+        assert !CollectionUtil.isAnyNull(name, endTime, tags);
+        this.name = name;
+        this.endTime = endTime;
+        this.tags = new UniqueTagList(tags); // protect internal tags from
+        // changes in the arg list
+        this.completed = false;
+    }
+
+    /**
+     * Overloaded constructor that also takes in isComplete attribute to ensure
+     * proper loading from the database.
+     */
+    public EndTask(Name name, EndTime endTime, UniqueTagList tags, boolean isComplete) {
+        assert !CollectionUtil.isAnyNull(name, endTime, tags);
+        this.name = name;
+        this.endTime = endTime;
+        this.tags = new UniqueTagList(tags); // protect internal tags from
+        // changes in the arg list
+        this.completed = isComplete;
+    }
+
+    @Override
+    public void setName(Name name) {
+        assert name != null;
+        this.name = name;
+    }
+
+    @Override
+    public Name getName() {
+        return name;
+    }
+
+    @Override
+    public StartTime getStartTime() {
+        return null;
+    }
+
+    @Override
+    public EndTime getEndTime() {
+        return endTime;
+    }
+
+    public void setEndTime(EndTime endTime) {
+        assert endTime != null;
+        this.endTime = endTime;
+    }
+
+    @Override
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof EndTask // instanceof handles nulls
+                        && ((EndTask) other).getName().equals(this.getName())
+                        && ((EndTask) other).getEndTime().equals(this.getEndTime())
+                        && (((EndTask) other).isComplete() == this.isComplete()));
+    }
+
+    @Override
+    public int hashCode() {
+        // use this method for custom fields hashing instead of implementing
+        // your own
+        return Objects.hash(name, endTime, tags);
+    }
+
+    @Override
+    public String toString() {
+        final StringBuilder builder = new StringBuilder();
+        builder.append(getName());
+        builder.append(" End Time: " + getEndTime().toString());
+        builder.append(" Tags: ");
+        getTags().forEach(builder::append);
+        return builder.toString();
+    }
+
+    @Override
+    public String getType() {
+        return Task.END_TYPE;
+    }
+}
+```
+###### /java/seedu/todolist/model/task/EndTime.java
+``` java
+/**
+ * Represents a Task's end time in the to-do list.
+ */
+public class EndTime implements Comparable<EndTime> {
+
+    public static final String MESSAGE_ENDTIME_CONSTRAINTS =
+            "End time should follow the format: DD-MM-YYYY (TIME - optional). E.g. \n"
+            + "12-12-2008 3.30 PM, or simply 12-12-2008";
+
+    private Date endTime;
+
+    public EndTime(String endTime) throws IllegalValueException {
+        Date temp = TimeUtil.parseTime(endTime);
+        if (temp == null) {
+            throw new IllegalValueException(MESSAGE_ENDTIME_CONSTRAINTS);
+        } else {
+            this.endTime = temp;
+        }
+    }
+
+    public EndTime(Date endTime) {
+        this.endTime = endTime;
+    }
+
+    protected Date getEndTime() {
+        return this.endTime;
+    }
+
+    public String toString() {
+        SimpleDateFormat dateFormatter = new SimpleDateFormat("dd-MM-yyyy h.mm a");
+        StringBuffer endTimeBuffer = dateFormatter.format(endTime, new StringBuffer(), new FieldPosition(0));
+        return endTimeBuffer.toString();
+    }
+
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof EndTime // instanceof handles nulls
+                && this.toString().equals(((EndTime) other).toString())); // state check
+    }
+
+    public int compareTo(EndTime other) {
+        return endTime.compareTo(other.getEndTime());
+    }
+
+    public int hashCode() {
+        return this.toString().hashCode();
+    }
+}
+```
+###### /java/seedu/todolist/model/task/FloatingTask.java
+``` java
+/*
+ * Represent a Task with no specified StartTime and EndTime.
+ */
+public class FloatingTask extends Task {
+
+    /**
+     * name, tags is guaranteed to be present and not null.
+     */
+    public FloatingTask(Name name, UniqueTagList tags) {
+        assert !CollectionUtil.isAnyNull(name, tags);
+        this.name = name;
+        this.tags = new UniqueTagList(tags); // protect internal tags from
+        // changes in the arg list
+        this.completed = false;
+    }
+
+    /**
+     * Overloaded constructor that also takes in isComplete attribute to ensure
+     * proper loading from the database.
+     */
+    public FloatingTask(Name name, UniqueTagList tags, boolean isComplete) {
+        assert !CollectionUtil.isAnyNull(name, tags);
+        this.name = name;
+        this.tags = new UniqueTagList(tags); // protect internal tags from
+        // changes in the arg list
+        this.completed = isComplete;
+    }
+
+    @Override
+    public void setName(Name name) {
+        assert name != null;
+        this.name = name;
+    }
+
+    @Override
+    public Name getName() {
+        return name;
+    }
+
+    @Override
+    public StartTime getStartTime() {
+        return null;
+    }
+
+    @Override
+    public EndTime getEndTime() {
+        return null;
+    }
+
+    @Override
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof FloatingTask // instanceof handles nulls
+                        && ((FloatingTask) other).getName().equals(this.getName())
+                        && (((FloatingTask) other).isComplete() == this.isComplete()));
+    }
+
+    @Override
+    public int hashCode() {
+        // use this method for custom fields hashing instead of implementing
+        // your own
+        return Objects.hash(name, tags);
+    }
+
+    @Override
+    public String toString() {
+        final StringBuilder builder = new StringBuilder();
+        builder.append(getName());
+        builder.append(" Tags: ");
+        getTags().forEach(builder::append);
+        return builder.toString();
+    }
+
+    @Override
+    public String getType() {
+        return Task.FLOATING_TYPE;
+    }
+}
+```
 ###### /java/seedu/todolist/model/task/parser/TaskParser.java
 ``` java
+/*
+ * Parse input into a suitable type of Task.
+ */
+public class TaskParser {
+
+    public static final String MESSAGE_INVALID_TASK = "Name must be present";
+
+```
+###### /java/seedu/todolist/model/task/parser/TaskParser.java
+``` java
+    /**
+     * Parses the given {@code String} of input that contains parameters
+     * of a Task object and calls the suitable TaskParser based on the parameters.
+     */
+    public static Task parseTask(String taskInput) throws IllegalValueException {
+        ArgumentTokenizer argsTokenizer =
+                new ArgumentTokenizer(PREFIX_START, PREFIX_END, PREFIX_TAG);
+        argsTokenizer.tokenize(taskInput);
+        try {
+            String name = argsTokenizer.getPreamble().get();
+            String startTime = (argsTokenizer.getValue(PREFIX_START).isPresent() ?
+                    argsTokenizer.getValue(PREFIX_START).get()
+                    : null);
+            String endTime = (argsTokenizer.getValue(PREFIX_END).isPresent() ?
+                    argsTokenizer.getValue(PREFIX_END).get()
+                    : null);
+            Set<String> tags = ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG));
+
+            final Set<Tag> tagSet = new HashSet<>();
+            for (String tagName : tags) {
+                tagSet.add(new Tag(tagName));
+            }
+
+            if (startTime != null && endTime != null) {
+                return new StartEndTask(new Name(name),
+                        new StartTime(startTime),
+                        new EndTime(endTime),
+                        new UniqueTagList(tagSet));
+            } else if (startTime != null && endTime == null) {
+                return new StartTask(new Name(name),
+                        new StartTime(startTime),
+                        new UniqueTagList(tagSet));
+            } else if (startTime == null && endTime != null) {
+                return new EndTask(new Name(name),
+                        new EndTime(endTime),
+                        new UniqueTagList(tagSet));
+            } else {
+                return new FloatingTask(new Name(name),
+                        new UniqueTagList(tagSet));
+            }
+        } catch (NoSuchElementException nsse) {
+            throw new NoSuchElementException(MESSAGE_INVALID_TASK);
+        }
+    }
+
+```
+###### /java/seedu/todolist/model/task/parser/TaskParser.java
+``` java
+    /*
+     * An overloaded method that takes in a Name object,
+     * a StartTime object, an EndTime object and a set of Tags
+     * and create a suitable Task object.
      */
     public static Task parseTask(Name name, StartTime startTime,
             EndTime endTime, UniqueTagList uniqueTagList) {
@@ -17,36 +568,41 @@
         }
     }
 
+```
+###### /java/seedu/todolist/model/task/parser/TaskParser.java
+``` java
     /*
      * An overloaded method that takes in a Name object,
      * a StartTime object, an EndTime object, a set of Tags
      * and a completion status
      * and create a suitable Task object.
+     */
+    public static Task parseTask(Name name, StartTime startTime,
+            EndTime endTime, UniqueTagList uniqueTagList,
+            boolean isComplete, String description) {
+        assert name != null;
+
+        Task resultTask;
+
+        if (startTime != null && endTime != null) {
+            resultTask = new StartEndTask(name, startTime, endTime, uniqueTagList, isComplete);
+        } else if (startTime != null && endTime == null) {
+            resultTask = new StartTask(name, startTime, uniqueTagList, isComplete);
+        } else if (startTime == null && endTime != null) {
+            resultTask = new EndTask(name, endTime, uniqueTagList, isComplete);
+        } else {
+            resultTask = new FloatingTask(name, uniqueTagList, isComplete);
+        }
+        resultTask.setDescription(description);
+        return resultTask;
+    }
+
 ```
 ###### /java/seedu/todolist/model/task/parser/TaskParser.java
 ``` java
-     */
-    public static Task parseTask(Name name, StartTime startTime,
-            EndTime endTime, UniqueTagList uniqueTagList, boolean isComplete) {
-        assert name != null;
-
-        if (startTime != null && endTime != null) {
-            return new StartEndTask(name, startTime, endTime, uniqueTagList, isComplete);
-        } else if (startTime != null && endTime == null) {
-            return new StartTask(name, startTime, uniqueTagList, isComplete);
-        } else if (startTime == null && endTime != null) {
-            return new EndTask(name, endTime, uniqueTagList, isComplete);
-        } else {
-            return new FloatingTask(name, uniqueTagList, isComplete);
-        }
-    }
-
     /*
      * Another overloaded method that takes in a Task object
      * and create a copy of it.
-```
-###### /java/seedu/todolist/model/task/parser/TaskParser.java
-``` java
      */
     public static Task parseTask(Task taskToCopy) {
         assert taskToCopy != null;
@@ -69,6 +625,569 @@
         } else {
             return new FloatingTask(name, uniqueTagList, isComplete);
         }
+    }
+}
+```
+###### /java/seedu/todolist/model/task/StartEndTask.java
+``` java
+/*
+ * Represent a Task with a StartTime and an EndTime.
+ */
+public class StartEndTask extends Task {
+
+    private StartTime startTime;
+    private EndTime endTime;
+
+    /**
+     * name, start time, end time and tags must be present and not null.
+     */
+    public StartEndTask(Name name, StartTime startTime, EndTime endTime, UniqueTagList tags) {
+        assert !CollectionUtil.isAnyNull(name, startTime, endTime, tags);
+        this.name = name;
+        this.startTime = startTime;
+        this.endTime = endTime;
+        this.tags = new UniqueTagList(tags); // protect internal tags from
+        // changes in the arg list
+        this.completed = false;
+    }
+
+    /**
+     * Overloaded constructor that also takes in isComplete attribute to ensure
+     * proper loading from the database.
+     */
+    public StartEndTask(Name name, StartTime startTime, EndTime endTime, UniqueTagList tags, boolean isComplete) {
+        assert !CollectionUtil.isAnyNull(name, startTime, endTime, tags);
+        this.name = name;
+        this.startTime = startTime;
+        this.endTime = endTime;
+        this.tags = new UniqueTagList(tags); // protect internal tags from
+        // changes in the arg list
+        this.completed = isComplete;
+    }
+
+    @Override
+    public void setName(Name name) {
+        assert name != null;
+        this.name = name;
+    }
+
+    @Override
+    public Name getName() {
+        return name;
+    }
+
+    @Override
+    public StartTime getStartTime() {
+        return startTime;
+    }
+
+    public void setStartTime(StartTime startTime) {
+        assert startTime != null;
+        this.startTime = startTime;
+    }
+
+    @Override
+    public EndTime getEndTime() {
+        return endTime;
+    }
+
+    public void setEndTime(EndTime endTime) {
+        assert endTime != null;
+        this.endTime = endTime;
+    }
+
+    @Override
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof StartEndTask // instanceof handles nulls
+                        && ((StartEndTask) other).getName().equals(this.getName())
+                        && ((StartEndTask) other).getStartTime().equals(this.getStartTime())
+                        && ((StartEndTask) other).getEndTime().equals(this.getEndTime())
+                        && (((StartEndTask) other).isComplete() == this.isComplete()));
+    }
+
+    @Override
+    public int hashCode() {
+        // use this method for custom fields hashing instead of implementing
+        // your own
+        return Objects.hash(name, startTime, endTime, tags);
+    }
+
+    @Override
+    public String toString() {
+        final StringBuilder builder = new StringBuilder();
+        builder.append(getName());
+        builder.append(" Start Time: " + getStartTime().toString());
+        builder.append(" End Time: " + getEndTime().toString());
+        builder.append(" Tags: ");
+        getTags().forEach(builder::append);
+        return builder.toString();
+    }
+
+    @Override
+    public String getType() {
+        return Task.START_END_TYPE;
+    }
+}
+```
+###### /java/seedu/todolist/model/task/StartTask.java
+``` java
+/*
+ * Represent a Task with only a StartTime but no EndTime specified.
+ */
+public class StartTask extends Task {
+
+    private StartTime startTime;
+
+    /**
+     * name, start time and tags must be present and not null.
+     */
+    public StartTask(Name name, StartTime startTime, UniqueTagList tags) {
+        assert !CollectionUtil.isAnyNull(name, startTime, tags);
+        this.name = name;
+        this.startTime = startTime;
+        this.tags = new UniqueTagList(tags); // protect internal tags from
+        // changes in the arg list
+        this.completed = false;
+    }
+
+    /**
+     * Overloaded constructor that also takes in isComplete attribute to ensure
+     * proper loading from the database.
+     */
+    public StartTask(Name name, StartTime startTime, UniqueTagList tags, boolean isComplete) {
+        assert !CollectionUtil.isAnyNull(name, startTime, tags);
+        this.name = name;
+        this.startTime = startTime;
+        this.tags = new UniqueTagList(tags); // protect internal tags from
+        // changes in the arg list
+        this.completed = isComplete;
+    }
+
+    @Override
+    public void setName(Name name) {
+        assert name != null;
+        this.name = name;
+    }
+
+    @Override
+    public Name getName() {
+        return name;
+    }
+
+    @Override
+    public StartTime getStartTime() {
+        return startTime;
+    }
+
+    public void setStartTime(StartTime startTime) {
+        assert startTime != null;
+        this.startTime = startTime;
+    }
+
+    @Override
+    public EndTime getEndTime() {
+        return null;
+    }
+
+    @Override
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof StartTask // instanceof handles nulls
+                        && ((StartTask) other).getName().equals(this.getName())
+                        && ((StartTask) other).getStartTime().equals(this.getStartTime())
+                        && (((StartTask) other).isComplete() == this.isComplete()));
+    }
+
+    @Override
+    public int hashCode() {
+        // use this method for custom fields hashing instead of implementing
+        // your own
+        return Objects.hash(name, startTime, tags);
+    }
+
+    @Override
+    public String toString() {
+        final StringBuilder builder = new StringBuilder();
+        builder.append(getName());
+        builder.append(" Start Time: " + getStartTime().toString());
+        builder.append(" Tags: ");
+        getTags().forEach(builder::append);
+        return builder.toString();
+    }
+
+    @Override
+    public String getType() {
+        return Task.START_TYPE;
+    }
+}
+```
+###### /java/seedu/todolist/model/task/StartTime.java
+``` java
+/**
+ * Represents a Task's start time in the to-do list.
+ */
+public class StartTime implements Comparable<StartTime> {
+
+    public static final String MESSAGE_STARTTIME_CONSTRAINTS =
+            "Start time should follow the format: DD-MM-YYYY (TIME - optional). E.g. \n"
+            + "12-12-2008 3.30 PM, or simply 12-12-2008";
+
+    private Date startTime;
+
+    public StartTime(String startTime) throws IllegalValueException {
+        Date temp = TimeUtil.parseTime(startTime);
+        if (temp == null) {
+            throw new IllegalValueException(MESSAGE_STARTTIME_CONSTRAINTS);
+        } else {
+            this.startTime = temp;
+        }
+    }
+
+    public StartTime(Date startTime) {
+        this.startTime = startTime;
+    }
+
+    protected Date getStartTime() {
+        return this.startTime;
+    }
+
+    public String toString() {
+        SimpleDateFormat dateFormatter = new SimpleDateFormat("dd-MM-yyyy h.mm a");
+        StringBuffer startTimeBuffer = dateFormatter.format(startTime, new StringBuffer(), new FieldPosition(0));
+        return startTimeBuffer.toString();
+    }
+
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof StartTime // instanceof handles nulls
+                && this.toString().equals(((StartTime) other).toString())); // state check
+    }
+
+    public int compareTo(StartTime other) {
+        return startTime.compareTo(other.getStartTime());
+    }
+
+    public int hashCode() {
+        return this.toString().hashCode();
+    }
+}
+```
+###### /java/seedu/todolist/model/task/Task.java
+``` java
+/**
+ * Represents a Task in the To-do list.
+ */
+public abstract class Task {
+
+    public static String END_TYPE = "endTask";
+    public static String START_END_TYPE = "startEndTask";
+    public static String START_TYPE = "startTask";
+    public static String FLOATING_TYPE = "floatingTask";
+
+    protected Name name;
+    protected UniqueTagList tags;
+    protected boolean completed;
+    protected String description;
+
+    public void setName(Name name) {
+        assert name != null;
+        this.name = name;
+    }
+
+    public Name getName() {
+        return name;
+    }
+
+    public boolean isComplete() {
+        return this.completed;
+    }
+
+    public void setAsComplete() {
+        this.completed = true;
+    }
+
+    public void setAsIncomplete() {
+        this.completed = false;
+    }
+
+    public String getDescription() {
+        return this.description;
+    }
+
+    public void setDescription(String description) {
+        this.description = description;
+    }
+
+    public UniqueTagList getTags() {
+        return new UniqueTagList(tags);
+    }
+
+    public abstract StartTime getStartTime();
+
+    public abstract EndTime getEndTime();
+
+    /**
+     * Replaces this task's tags with the tags in the argument tag list.
+     */
+    public void setTags(UniqueTagList replacement) {
+        tags.setTags(replacement);
+    }
+
+    /*
+     * Return a Hash Code that is unique to this Task object.
+     */
+    @Override
+    public abstract int hashCode();
+
+    /**
+     * Returns true if both have the same Task type and the same details.
+     * Tags are neglected.
+     */
+    @Override
+    public abstract boolean equals(Object other);
+
+    /**
+     * Formats the task as text, showing all details of the task.
+     */
+    @Override
+    public abstract String toString();
+
+    /**
+     * Returns the type of the task in a string.
+     *
+     */
+    public abstract String getType();
+}
+```
+###### /java/seedu/todolist/model/task/TimeUtil.java
+``` java
+ */
+public class TimeUtil {
+
+    /*
+     * Parse a string input and return a Date object that corresponds to
+     * the date and time conveyed in the string input.
+     * @return null if the given string does not follow allowed format
+```
+###### /java/seedu/todolist/model/task/TimeUtil.java
+``` java
+     */
+    public static Date parseTime(String time) {
+        SimpleDateFormat dateFormatter = new SimpleDateFormat("dd-MM-yyyy h.mm a");
+        Date temp = dateFormatter.parse(time, new ParsePosition(0));
+        if (temp == null) {
+            dateFormatter = new SimpleDateFormat("dd-MM-yyyy");
+            temp = dateFormatter.parse(time, new ParsePosition(0));
+            return temp;
+        }
+        return temp;
+    }
+}
+```
+###### /java/seedu/todolist/model/task/UniqueTaskList.java
+``` java
+    /**
+     * Add a description to the task in the list at position {@code index} using {@code editedTask}.
+     */
+    public void describeTask(int index, Task editedTask) {
+        assert editedTask != null;
+
+        internalList.set(index, editedTask);
+    }
+
+```
+###### /java/seedu/todolist/model/task/UniqueTaskList.java
+``` java
+    /*
+     * Mark the targeted Task as completed.
+     *
+     * It is guaranteed that internalList contains the index provided,
+     * and that internalList contains the targetTask.
+     */
+    public void completeTask(int index, Task targetTask) {
+        assert targetTask != null;
+        assert this.contains(targetTask) == true;
+
+        Task taskToComplete = internalList.get(index);
+
+        taskToComplete.setAsComplete();
+        internalList.set(index, taskToComplete);
+    }
+
+    /**
+     * Removes the equivalent task from the list.
+     *
+     * @throws TaskNotFoundException if no such task could be found in the list.
+     */
+    public boolean remove(Task toRemove) throws TaskNotFoundException {
+        assert toRemove != null;
+        final boolean taskFoundAndDeleted = internalList.remove(toRemove);
+        if (!taskFoundAndDeleted) {
+            throw new TaskNotFoundException();
+        }
+        return taskFoundAndDeleted;
+    }
+
+    public void setTasks(UniqueTaskList replacement) {
+        this.internalList.setAll(replacement.internalList);
+    }
+
+    public void setTasks(List<? extends Task> tasks) throws DuplicateTaskException {
+        final UniqueTaskList replacement = new UniqueTaskList();
+        for (final Task task : tasks) {
+            replacement.add(TaskParser.parseTask(task));
+        }
+        setTasks(replacement);
+    }
+
+    public UnmodifiableObservableList<Task> asObservableList() {
+        return new UnmodifiableObservableList<>(internalList);
+    }
+
+    @Override
+    public Iterator<Task> iterator() {
+        return internalList.iterator();
+    }
+
+    @Override
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof UniqueTaskList // instanceof handles nulls
+                        && this.internalList.equals(
+                                ((UniqueTaskList) other).internalList));
+    }
+
+    @Override
+    public int hashCode() {
+        return internalList.hashCode();
+    }
+
+    /**
+     * Signals that an operation would have violated the 'no duplicates' property of the list.
+     */
+    public static class DuplicateTaskException extends DuplicateDataException {
+        protected DuplicateTaskException() {
+            super("Operation would result in duplicate tasks");
+        }
+    }
+
+    /**
+     * Signals that an operation targeting a specified task in the list would fail because
+     * there is no such matching task in the list.
+     */
+    public static class TaskNotFoundException extends Exception {}
+
+}
+```
+###### /java/seedu/todolist/model/ToDoList.java
+``` java
+    public void describeTask(int index, Task editedTask) {
+        assert editedTask != null;
+        tasks.describeTask(index, editedTask);
+    }
+
+    /*
+     * Mark the Task at position {@code index} as completed by setting its {@code complete}
+     * attribute to {@code true}
+     */
+```
+###### /java/seedu/todolist/model/ToDoList.java
+``` java
+    public void completeTask(int index, Task targetTask) throws UniqueTaskList.TaskNotFoundException {
+        assert targetTask != null;
+        assert index >= 0;
+
+        if (tasks.contains(targetTask)) {
+            tasks.completeTask(index, targetTask);
+        } else {
+            throw new UniqueTaskList.TaskNotFoundException();
+        }
+    }
+
+    /**
+     * Ensures that every tag in this task:
+     *  - exists in the master list {@link #tags}
+     *  - points to a Tag object in the master list
+     */
+    private void syncMasterTagListWith(Task task) {
+        final UniqueTagList taskTags = task.getTags();
+        tags.mergeFrom(taskTags);
+
+        // Create map with values = tag object references in the master list
+        // used for checking task tag references
+        final Map<Tag, Tag> masterTagObjects = new HashMap<>();
+        tags.forEach(tag -> masterTagObjects.put(tag, tag));
+
+        // Rebuild the list of task tags to point to the relevant tags in the master tag list.
+        final Set<Tag> correctTagReferences = new HashSet<>();
+        taskTags.forEach(tag -> correctTagReferences.add(masterTagObjects.get(tag)));
+        task.setTags(new UniqueTagList(correctTagReferences));
+    }
+
+    /**
+     * Ensures that every tag in these tasks:
+     *  - exists in the master list {@link #tags}
+     *  - points to a Tag object in the master list
+     *  @see #syncMasterTagListWith(Task)
+     */
+    private void syncMasterTagListWith(UniqueTaskList tasks) {
+        tasks.forEach(this::syncMasterTagListWith);
+    }
+
+    public boolean removeTask(Task key) throws UniqueTaskList.TaskNotFoundException {
+        if (tasks.remove(key)) {
+            return true;
+        } else {
+            throw new UniqueTaskList.TaskNotFoundException();
+        }
+    }
+
+    //// tag-level operations
+
+    public void addTag(Tag t) throws UniqueTagList.DuplicateTagException {
+        tags.add(t);
+    }
+
+    //// util methods
+
+    @Override
+    public String toString() {
+        return tasks.asObservableList().size() + " tasks, " + tags.asObservableList().size() +  " tags";
+        // TODO: refine later
+    }
+
+
+    @Override
+    public ObservableList<Task> getTaskList() {
+        return new UnmodifiableObservableList<>(tasks.asObservableList());
+    }
+
+    @Override
+    public ObservableList<Tag> getTagList() {
+        return new UnmodifiableObservableList<>(tags.asObservableList());
+    }
+
+    @Override
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof ToDoList // instanceof handles nulls
+                        && this.tasks.equals(((ToDoList) other).tasks)
+                        && this.tags.equalsOrderInsensitive(((ToDoList) other).tags));
+    }
+
+    @Override
+    public int hashCode() {
+        // use this method for custom fields hashing instead of implementing your own
+        return Objects.hash(tasks, tags);
+    }
+
+    public UniqueTaskList getTasks() {
+        return tasks;
+    }
+
+    public UniqueTagList getTags() {
+        return tags;
     }
 }
 ```
