--- a/collated/main/A0144240W.md
+++ b/collated/main/A0144240W.md
@@ -26,41 +26,270 @@ public class ViewListChangedEvent extends BaseEvent {
     @Override
     public synchronized void deleteTask(Task target) throws TaskNotFoundException {
         toDoList.removeTask(target);
-        indicateToDoListChanged();
+        indicateToDoListChanged(DELETE);
     }
 
     @Override
-    public synchronized void completeTask(int filteredTaskListIndex, Task target) throws TaskNotFoundException {
-        int toDoListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
-        toDoList.completeTask(toDoListIndex, target);
-        indicateToDoListChanged();
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    @Override
+    public void updateFilteredTaskList(Set<String> keywords) {
+        if (isViewIncomplete) {
+            filteredTasks.setPredicate(findInIncomplete(keywords));
+        } else if (isViewComplete) {
+            filteredTasks.setPredicate(findInComplete(keywords));
+        } else if (isViewOverdue) {
+            filteredTasks.setPredicate(findInOverdue(keywords));
+        } else if (isViewUpcoming) {
+            filteredTasks.setPredicate(findInUpcoming(keywords));
+        } else {
+            filteredTasks.setPredicate(findInAll(keywords));
+        }
     }
 
-    @Override
-    public synchronized void addTask(Task task) throws UniqueTaskList.DuplicateTaskException {
-        toDoList.addTask(task);
-        updateFilteredListToShowAll();
-        indicateToDoListChanged();
+
+  //=========== Methods to help in filtering task list with given keywords ==============================
+
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    /**
+     * Returns a predicate to find keywords when in the incomplete view
+     * @param keywords
+     * @return
+     */
+    private Predicate<Task> findInIncomplete(Set<String> keywords) {
+        return p -> !p.isComplete() && containsIgnoreCase(p, keywords);
     }
 
-    @Override
-    public void updateTask(int filteredTaskListIndex, Task editedTask)
-            throws UniqueTaskList.DuplicateTaskException {
-        assert editedTask != null;
-
-        int toDoListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
-        toDoList.updateTask(toDoListIndex, editedTask);
-        indicateToDoListChanged();
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    /**
+     * Returns a predicate to find keywords when in the complete view
+     * @param keywords cannot be null
+     *
+     */
+    private Predicate<Task> findInComplete(Set<String> keywords) {
+        return p -> p.isComplete() && containsIgnoreCase(p, keywords);
     }
 
-    //=========== Filtered Task List Accessors =============================================================
-
-    @Override
-    public UnmodifiableObservableList<Task> getFilteredTaskList() {
-        return new UnmodifiableObservableList<>(filteredTasks);
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    /**
+     * Returns a predicate to find keywords when in the overdue view
+     * @param keywords cannot be null
+     *
+     */
+    private Predicate<Task> findInOverdue(Set<String> keywords) {
+        return p -> isOverdue(p) && containsIgnoreCase(p, keywords);
     }
 
-    @Override
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    /**
+     * Returns a predicate to find keywords when in the upcoming view
+     * @param keywords cannot be null
+     *
+     */
+    private Predicate<Task> findInUpcoming(Set<String> keywords) {
+        return p -> isUpcoming(p) && containsIgnoreCase(p, keywords);
+    }
+
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    /**
+     * Returns a predicate to find keywords when in the all view
+     * @param keywords cannot be null
+     *
+     */
+    private Predicate<Task> findInAll(Set<String> keywords) {
+        return p -> containsIgnoreCase(p, keywords);
+    }
+
+
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    /**
+     * Returns true if the task has keywords in its tags or name
+     * @param keywords cannot be null
+     *
+     */
+    private boolean containsIgnoreCase(Task task, Set<String> keywords) {
+        for (String word : keywords) {
+            String preppedWord = word.trim();
+            if (preppedWord.startsWith("t/")) {
+                String preppedTag = preppedWord.substring(2);
+                if (matchTag(task.getTags().toSet(), preppedTag)) {
+                    return true;
+                }
+            } else {
+                if (matchName(task.getName().toString(), preppedWord)) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    /**
+     * Returns true if the set of tags contain the searchTag
+     * Ignores case, a full tag match is required.
+     * @return
+     */
+    private boolean matchTag(Set<Tag> tags, String searchTag) {
+        for (Tag tag : tags) {
+            if (tag.getTagName().toLowerCase().equals(searchTag.toLowerCase())) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    /**
+     * Returns true if the taskName contains the searchName
+     * Ignores case, a full word match is not required.
+     * @param taskName must not be null
+     * @param searchName must not be null
+     *
+     */
+    private boolean matchName(String taskName, String searchName) {
+        if (taskName.toLowerCase().contains(searchName.toLowerCase())) {
+            return true;
+        }
+        return false;
+    }
+
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    /**
+     * Resets the boolean values of the views to false.
+     */
+    private void resetViews() {
+        isViewComplete = false;
+        isViewIncomplete = false;
+        isViewOverdue = false;
+        isViewUpcoming = false;
+        isViewAll = false;
+    }
+}
+
+
+
+
+```
+###### /java/seedu/todolist/ui/BrowserPanel.java
+``` java
+
+    /**
+     * @param placeholder The AnchorPane where the BrowserPanel must be inserted
+     */
+    public BrowserPanel(AnchorPane placeholder) {
+        super(FXML);
+        FxViewUtil.applyAnchorBoundaryParameters(display, 0.0, 0.0, 0.0, 0.0);
+        placeholder.getChildren().add(display);
+    }
+
+```
+###### /java/seedu/todolist/ui/BrowserPanel.java
+``` java
+    public void loadPersonPage(Task task) {
+        tagsFlow.setHgap(10);
+        nameLabel.setText(task.getName().toString());
+        tagsheader.setText("Tags:");
+        task.getTags().forEach(tag -> tagsFlow.getChildren().add(new Label(tag.tagName)));
+    }
+
+```
+###### /java/seedu/todolist/ui/BrowserPanel.java
+``` java
+    public void freeResources() {
+        tagsFlow.getChildren().clear();
+    }
+
+}
+```
+###### /java/seedu/todolist/ui/MainWindow.java
+``` java
+    @FXML
+    public void handleAllButton() throws CommandException {
+        String command = LIST + " " + ListCommand.TYPE_ALL;
+        logic.execute(command);
+    }
+
+```
+###### /java/seedu/todolist/ui/MainWindow.java
+``` java
+    @FXML
+    public void handleCompletedButton() throws CommandException {
+        String command = LIST + " " + ListCommand.TYPE_COMPLETE;
+        logic.execute(command);
+    }
+
+```
+###### /java/seedu/todolist/ui/MainWindow.java
+``` java
+    @FXML
+    public void handleIncompleteButton() throws CommandException {
+        String command = LIST + " " + ListCommand.TYPE_INCOMPLETE;
+        logic.execute(command);
+    }
+
+```
+###### /java/seedu/todolist/ui/MainWindow.java
+``` java
+    @FXML
+    public void handleOverdueButton() throws CommandException {
+        String command = LIST + " " + ListCommand.TYPE_OVERDUE;
+        logic.execute(command);
+    }
+
+```
+###### /java/seedu/todolist/ui/MainWindow.java
+``` java
+    @FXML
+    public void handleUpcomingButton() throws CommandException {
+        String command = LIST + " " + ListCommand.TYPE_UPCOMING;
+        logic.execute(command);
+    }
+
+    void show() {
+        primaryStage.show();
+    }
+
+    /**
+     * Closes the application.
+     */
+    @FXML
+    private void handleExit() {
+        raise(new ExitAppRequestEvent());
+    }
+
+    public TaskListPanel getTaskListPanel() {
+        return this.taskListPanel;
+    }
+
+    void loadPersonPage(Task person) {
+        browserPanel.loadPersonPage(person);
+    }
+
+    void releaseResources() {
+        browserPanel.freeResources();
+    }
+
+
 ```
 ###### /java/seedu/todolist/ui/MainWindow.java
 ``` java
@@ -77,30 +306,23 @@ public class ViewListChangedEvent extends BaseEvent {
 ``` java
     public void indicateButtonChange(String typeOfButton) {
         changeButtonsBackToOriginalState();
-        switch(typeOfButton) {
-
-        case ListCommand.TYPE_INCOMPLETE:
-            incompleteButton.getStyleClass().add(SELECTED);
-            break;
-
-        case ListCommand.TYPE_COMPLETE:
-            completedButton.getStyleClass().add(SELECTED);
-            break;
-
-        case ListCommand.TYPE_OVERDUE:
-            overdueButton.getStyleClass().add(SELECTED);
-            break;
-
-        case ListCommand.TYPE_UPCOMING:
+        if (typeOfButton.equals(ListCommand.TYPE_UPCOMING)) {
+            taskListPanel = new TaskListPanel(getTaskListPlaceholder(), logic.getSortedTaskList());
             upcomingButton.getStyleClass().add(SELECTED);
-            break;
+        } else {
+            taskListPanel = new TaskListPanel(getTaskListPlaceholder(), logic.getFilteredTaskList());
 
-        default:
-            allButton.getStyleClass().add(SELECTED);
-
+            if (typeOfButton.equals(ListCommand.TYPE_INCOMPLETE)) {
+                incompleteButton.getStyleClass().add(SELECTED);
+            } else if (typeOfButton.equals(ListCommand.TYPE_COMPLETE)) {
+                completedButton.getStyleClass().add(SELECTED);
+            } else if (typeOfButton.equals(ListCommand.TYPE_OVERDUE)) {
+                overdueButton.getStyleClass().add(SELECTED);
+            } else {
+                allButton.getStyleClass().add(SELECTED);
+            }
         }
     }
-
 
 }
 ```
@@ -112,6 +334,16 @@ public class ViewListChangedEvent extends BaseEvent {
         int firstSpaceIndex = event.toString().indexOf(" ");
         String typeOfList = event.toString().substring(0, firstSpaceIndex);
         mainWindow.indicateButtonChange(typeOfList);
+    }
+
+```
+###### /java/seedu/todolist/ui/UiManager.java
+``` java
+    @Subscribe
+    private void handleToDoListEventChanged(ToDoListChangedEvent event) {
+        if (event.typeOfCommand.equals("update") || event.typeOfCommand.equals("add")) {
+            mainWindow.getTaskListPanel().scrollTo(event.index);
+        }
     }
 
 }
